# NN_Framework

./: CMakeLists.txt  NeuralNetwork.hpp  main.cpp
Activations/: Identity.hpp  ReLU.hpp  Sigmoid.hpp
Conv/: Conv1DLayer.hpp
Dense/: Dense.hpp
Tensor/: Initializers.hpp  Tensor.hpp
